--- a/bitnami/wordpress-nginx/6/debian-11/rootfs/opt/bitnami/nginx/conf/nginx.conf
+++ b/bitnami/wordpress-nginx/6/debian-11/rootfs/opt/bitnami/nginx/conf/nginx.conf
@@ -33,9 +33,9 @@ http {
     gzip_proxied       any;
     gzip_types         text/plain text/css application/javascript text/xml application/xml+rss;
     keepalive_timeout  65;
-    ssl_protocols      TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+    ssl_protocols      TLSv1.2 TLSv1.3;
     ssl_ciphers        HIGH:!aNULL:!MD5;
-    client_max_body_size 80M;
+    client_max_body_size 8192M;
     server_tokens off;
 
     absolute_redirect  off;
